# simplelog-topic

./: .clang-format  APIs.md  CMakeLists.txt  CONTRIBUTORS.md  CentOS-09-performance-8-Core-1Billion.txt  CentOS-09-performance-8-Core.txt  FEATURE.md  INSTALL.md  LICENSE.txt  LinuxCentOs09-perfomance.txt  LinuxCentOs09-performance.txt  MSVC-2022-performance.txt  MacOSX-performance-2-Core.txt  One_Billion_records-performance.txt  One_Billion_records.txt  PERFORMANCE.md  README.html  README.md  README.md.bak  README_BychatGPT.md  README_example_01.md  simplelog-topic.md  zline.sh
bk-bin/: README.html  README1.md
include/: simplelog.h  simplelog_bin_parser.h
meta-libsimplelog/recipes-libsimplelog/libsimplelog/: libsimplelog_git.bb
src/: CMakeLists.txt  README.txt  simplelog-VM-CentOsS9-64bit.cfg  simplelog-win64-msvc-2022.cfg  simplelog.c  simplelog.cfg  simplelog.h  simplelog_bin_parser.c  simplelog_config.h  spd_example.cpp
src/c_test/: main.c
src/cpp_test/: main.cpp
src/linux/: Makefile  simplelog.cfg  xrun.sh  z.cfg
src/mach/: Makefile  simplelog.cfg  xrun.sh  z.cfg
src/mingw32/: Makefile  Makefile.bak
tests/: xrun.sh
tests/c_test/: main.c
tests/cpp_test/: main.cpp  verify_tool.cpp
win32/: CMakeCache.txt
win64/: CMakeCache.txt
x-cfg/: simplelog-win64-msvc-2022.cfg
x-test-result/: CentOS-09-performance-8-Core-1Billion.txt  CentOS-09-performance-8-Core-binary-log.txt  CentOS-09-performance-8-Core.txt  LinuxCentOs09-performance.txt  LinuxCentOs09-performance.txt.bak  MSVC-2022-performance.txt  MacOSX-performance-2-Core.txt  One_Billion_records-performance.txt  Ubuntu-24.04-performance-8-Core-binary-log-2-billions.txt  Ubuntu-24.04-performance-8-Core-binary-log.txt
